--- a/TodoApp/Base.lproj/Main.storyboard
+++ b/TodoApp/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="qTR-aB-Kfl" kind="push" id="i9V-ZV-7iP"/>
+                                    <segue destination="qTR-aB-Kfl" kind="push" identifier="EditNotDoneTaskSegue" id="i9V-ZV-7iP"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DoneTaskCell" textLabel="id5-hS-j9v" style="IBUITableViewCellStyleDefault" id="He4-C8-Scv">
@@ -49,6 +49,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="qTR-aB-Kfl" kind="push" identifier="EditDoneTaskSegue" id="XCV-fw-SFG"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -147,6 +150,9 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="taskDataChanged:" destination="qTR-aB-Kfl" eventType="editingChanged" id="ZN5-Al-uEf"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -172,6 +178,9 @@
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yHk-Ma-vK4">
                                                     <rect key="frame" x="251" y="6" width="51" height="31"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="taskDataChanged:" destination="qTR-aB-Kfl" eventType="valueChanged" id="dRQ-Al-toh"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                         </tableViewCellContentView>
@@ -185,6 +194,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Edit Task" id="gfN-2i-2qZ"/>
+                    <connections>
+                        <outlet property="doneSwitch" destination="yHk-Ma-vK4" id="vsc-ST-18o"/>
+                        <outlet property="nameField" destination="kqr-hT-XIV" id="M73-UQ-iP5"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aZ7-fH-Wzc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -232,4 +245,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="XCV-fw-SFG"/>
+    </inferredMetricsTieBreakers>
 </document>
